@@ -34,11 +34,6 @@ $TYPO3_AJAX = true;
 
 require('init.php');
 require('classes/class.typo3ajax.php');
-require_once(PATH_typo3.'sysext/lang/lang.php');
-
-
-$GLOBALS['LANG'] = t3lib_div::makeInstance('language');
-$GLOBALS['LANG']->init($GLOBALS['BE_USER']->uc['lang']);
 
 	// finding the script path from the variable
 $ajaxID = (string) t3lib_div::_GP('ajaxID');
