@@ -28,10 +28,7 @@
 if(TYPO3_REQUESTTYPE & TYPO3_REQUESTTYPE_AJAX) {
 	require_once('interfaces/interface.backend_toolbaritem.php');
 	require_once(PATH_t3lib.'class.t3lib_loadmodules.php');
-	require_once(PATH_typo3.'sysext/lang/lang.php');
 
-	$GLOBALS['LANG'] = t3lib_div::makeInstance('language');
-	$GLOBALS['LANG']->init($GLOBALS['BE_USER']->uc['lang']);
 	$GLOBALS['LANG']->includeLLFile('EXT:lang/locallang_misc.xml');
 
 		// needed to get the correct icons when reloading the menu after saving it
